logs/forward-brief-2026-05-04.log
=== Forward Brief — 2026-05-04 ===
Started at Mon May  4 13:30:11 UTC 2026
--- Searching Gmail inbox for today's brief ---
  File "<string>", line 55
    
    ^
SyntaxError: expected 'except' or 'finally' block
=== Forward Brief — 2026-05-04 ===
Started at Mon May  4 13:30:54 UTC 2026
--- Searching Gmail inbox for today's brief ---
--- Forwarding brief to Roderick ---
Traceback (most recent call last):
  File "<string>", line 6, in <module>
FileNotFoundError: [Errno 2] No such file or directory: '/tmp/latest_brief_info.json'
=== Forward Brief — 2026-05-04 — Complete ===
Forwarded at Mon May  4 13:34:26 UTC 2026 | ID: 19df331ef55c5a0e | To: roderick.jones@gmail.com | Att: security_brief_2026-05-04.pdf (5.1 MB)
